# AIFS

./: README.md
AIFS/: CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
AIFS/apps/: aifs_demo.cpp  chunk_server_main.cpp  metadata_server_main.cpp
AIFS/docs/: architecture.md  implementation_mapping.md  submission_note.md
AIFS/include/aifs/client/: aifs_client.h  cache_manager.h  io_pipeline.h  prefetch_manager.h
AIFS/include/aifs/common/: status.h  types.h
AIFS/include/aifs/metadata/: manifest_manager.h  metadata_server.h  namespace_manager.h  placement_manager.h
AIFS/include/aifs/qos/: checkpoint_scheduler.h  token_bucket.h
AIFS/include/aifs/storage/: chunk_store.h  replica_manager.h  rocksdb_engine.h
AIFS/include/aifs/tiering/: migration_manager.h  tiering_manager.h
AIFS/proto/: aifs.proto
AIFS/scripts/: package.ps1  run_demo.ps1  run_demo.sh
AIFS/src/client/: aifs_client.cpp  cache_manager.cpp  io_pipeline.cpp  prefetch_manager.cpp
AIFS/src/common/: status.cpp  types.cpp
AIFS/src/metadata/: manifest_manager.cpp  metadata_server.cpp  namespace_manager.cpp  placement_manager.cpp
AIFS/src/qos/: checkpoint_scheduler.cpp  token_bucket.cpp
AIFS/src/storage/: chunk_store.cpp  replica_manager.cpp  rocksdb_engine.cpp
AIFS/src/tiering/: migration_manager.cpp  tiering_manager.cpp
AIFS/tests/: basic_flow_test.cpp
